test/libsolidity/syntaxTests/structs/address_member_declaration.sol
contract C {
    struct S { uint address; }
}
// ----
// ParserError 2314: (33-40): Expected identifier but got 'address'
